kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-a
  labels:
    app: app-a
spec:
  containers:
    - name: myapp
      image: myapp:app-a
  nodeName: node1
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-b
  labels:
    app: app-b
spec:
  containers:
    - name: myapp
      image: myapp:app-b
  nodeName: node1
